components/datepicker/src/styles/snowflake/style.scss
@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;

.accents {
  flex-grow: 0;
  display: flex;
  align-items: center;
  justify-content: center;

  &.left {
    padding-right: var(--ds-size-100, vac.$ds-size-100);
  }

  &.right {
    padding-left: var(--ds-size-100, vac.$ds-size-100);
    width: var(--ds-size-300, vac.$ds-size-300);;
  }
}

.mainContent {
  height: 100%;
  max-height: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.inputSection {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.inputSection:not(:is(.disabled, .hasFocus, .hasValue)) {
  .inputDivider {
    display: none;
  }
}

.inputContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;

  &:first-of-type {
    justify-content: flex-end;
  }

  &:last-of-type {
    justify-content: flex-start;
  }
}

:host([disabled]) {
  .inputSection {
    display: none;
  }
}

:host([layout*='snowflake']) {
  [auro-input] {
    flex: 1;

    text-align: center;

    &::part(label),
    &::part(accent-left),
    &::part(accent-right) {
      display: none;
    }

    &::part(input) {
      padding-bottom: unset;
      text-align: center;

      font-size: var(--ds-text-body-size-lg, vac.$ds-text-body-size-lg);
      line-height: var(--ds-text-body-height-lg, vac.$ds-text-body-height-lg);
      transition: unset; // default transition makes input "slide" in
    }

    &::part(wrapper) {
      // for layout overrides on input
      min-height: unset;
      max-height: unset;
      box-shadow: unset;

      .mainContent {
        padding-bottom: unset;
      }
    }

    &::part(inputHelpText) {
      display: none;
    }
  }

  [auro-dropdown]::part(trigger) {
    width: 100%;
  }

  // for the trigger content

  .dpTriggerContent {
    width: 100%;
  }

  .wrapper {
    height: 60px;
    // TODO: update to tokens (token x 2 for 48px)
    width: calc(100% - 48px);
    display: flex;
    flex-direction: row;
    justify-content: space-between;

    // TODO: update to tokens
    padding-left: 24px;
    padding-right: 24px;
  }

  // unfocused state(s)

  label {
    font-size: var(--ds-text-body-size-lg, vac.$ds-text-body-size-lg);
    line-height: var(--ds-text-body-height-lg, vac.$ds-text-body-height-lg);
    font-weight: 450;
    letter-spacing: 0;

    &.hasFocus,
    &.hasValue {
      font-size: var(--ds-text-body-size-xs, vac.$ds-text-body-size-xs);
      line-height: var(--ds-text-body-height-xs, vac.$ds-text-body-height-xs);
    }
  }

  .inputDivider {
    // TODO: add fallback for tokens
    height: 18px;
    margin: 4px 12px;
    width: 2px;
  }
}

